--- a/EMS/package.json
+++ b/EMS/package.json
@@ -4,9 +4,12 @@
     "private": true,
     "dependencies": {
         "body-parser": "^1.18.3",
+        "cookie-parser": "^1.4.4",
+        "csurf": "^1.9.0",
         "express": "^4.16.4",
         "helmet": "^3.16.0",
         "mongoose": "^5.4.22",
-        "morgan": "^1.9.1"
+        "morgan": "^1.9.1",
+        "nodemon": "^1.18.11"
     }
 }
