--- a/EMS/package.json
+++ b/EMS/package.json
@@ -11,5 +11,11 @@
         "mongoose": "^5.4.22",
         "morgan": "^1.9.1",
         "nodemon": "^1.18.11"
+    },
+    "scripts":{"start":"node app.js"
+
+    },
+    "engines":{
+        "node":"10.15.0"
     }
 }
